<resources>

    <string name="app_name">Bright Awake</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_bright_alarm_main">BrightAwake</string>
    <string name="title_activity_alarm_ring">BrightAwake</string>
    <string name="alarm_off">Turn Off Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="frequency"> Alarm Tone Pitch (low - high)</string>
    <string name="test">Test Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="snooze">Snooze</string>
    <string name="about">About This App</string>
    <string name="sponsor">BrightAwake was sponsored by SRT Solutions</string>
    <string name="website">www.srtsolutions.com</string>
    <string name="about_description">
		<![CDATA[
		Notes about this first version of BrightAwake:\n\n
The volume the alarm will play at is system alarm volume.  You can adjust this in settings > sounds > volumes.\n\n

The snooze length 5 minutes.\n\n

This version is intentionally created to be simple. Please let me know if you encounter any errors.
		]]>
	</string>

</resources>